[package]
name = "druid-enums"
version = "0.1.0"
edition = "2018"
authors = ["Leopold Luley <git@leopoldluley.de>"]
description = "Allows matching a druid::Widget to each variant of an enum."
keywords = ["druid", "derive", "enum", "gui"]
categories = ["gui"]
repository = "https://github.com/finnerale/druid-enums"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.1"
log = "0.4.11"
proc-macro2 = "1.0.19"
quote = "1.0.7"
syn = "1.0.35"

[dev-dependencies]
druid = "0.6.0"
